--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
       property="og:url"
       content="https://anastasiyank.github.io/rental-car/"
     /> -->
-    <meta property="og:image" content="%PUBLIC_URL%/block.png" />
+    <meta property="og:image" content="/block.png" />
     <meta
       property="og:description"
       content="Embark on an Exciting Language Journey with Expert Language Tutors: Elevate your language proficiency to new heights by connecting with highly qualified and experienced tutors."
     />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400&display=swap" rel="stylesheet">
     <title>Learn Lingo</title>
   </head>
   <body>
